--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h1 style="text-align:center" >Welcome to Accio Jobs!</h1>
+	<h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 </body>
 
 </html>
