--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<marquee><h1 style="text-align:center" >Welcome to Accio Jobs!</h1></marquee>
+	<marquee><h1>Welcome to Accio Jobs!</h1></marquee>
 
 
 	
